ui-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: retail
spec:
  selector:
    app: ui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
